feat: 添加地址配置功能，修复输入框问题
- 新增 main-fixed-address-config.js 支持地址配置
- 修复 macOS/Windows 输入框显示问题
- 添加自定义 HTML 输入窗口
- 支持局域网地址连接
- 更新文档和配置

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "openclaw-desktop",
   "version": "1.0.0",
   "description": "OpenClaw桌面客户端 - 由Timi AI助手开发，解决Electron复制粘贴问题",
-  "main": "main-only-drag-fix.js",
+  "main": "main-fixed-address-config.js",
   "scripts": {
     "start": "electron .",
     "pack": "electron-builder --dir",
@@ -35,10 +35,8 @@
     },
     "win": {
       "target": [
-        "nsis",
-        "zip"
-      ],
-      "icon": "icon.ico"
+        "portable"
+      ]
     },
     "linux": {
       "target": [
@@ -67,5 +65,8 @@
   "devDependencies": {
     "electron": "^40.2.1",
     "electron-builder": "^25.1.8"
+  },
+  "dependencies": {
+    "http-proxy": "^1.18.1"
   }
 }
